Refactor: Lobby UI to Dark Gothic Glassmorphism

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @theme {
   /* 字体 */
   --font-serif: 'Cinzel', serif;
-  --font-sans: 'MedievalSharp', cursive;
+  --font-sans: 'Inter', sans-serif;
+  --font-display: 'MedievalSharp', cursive;
 
   /* 血色 (Blood) */
   --color-blood-50: #fef2f2;
